[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/card-game-background.png" type="Texture" id=1]
[ext_resource path="res://Main/Board.gd" type="Script" id=2]
[ext_resource path="res://Main/Deck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/card-game-field-export.png" type="Texture" id=4]
[ext_resource path="res://Assets/hand-layout.png" type="Texture" id=5]
[ext_resource path="res://Main/EnemyPortrait.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main/MainPortrait.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main/ReadyButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Main/DeckView.tscn" type="PackedScene" id=9]
[ext_resource path="res://Main/DrawButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Main/RoundLabel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/exit-button-pressed.png" type="Texture" id=12]
[ext_resource path="res://Assets/exit-button-normal.png" type="Texture" id=13]
[ext_resource path="res://Main/CardView.tscn" type="PackedScene" id=14]
[ext_resource path="res://Main/RoundConclusion.tscn" type="PackedScene" id=15]
[ext_resource path="res://Main/EnemyDeck.tscn" type="PackedScene" id=16]

[node name="Board" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 181 )
z_index = -3
z_as_relative = false
texture = ExtResource( 1 )

[node name="Deck" parent="." instance=ExtResource( 3 )]
margin_left = 227.0
margin_top = 154.0
margin_right = 275.0
margin_bottom = 219.0

[node name="EnemyDeck" parent="." instance=ExtResource( 16 )]
margin_left = 226.0
margin_top = 37.0
margin_right = 274.0
margin_bottom = 102.0

[node name="EnemyDeckList" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattlefieldLayout" type="Sprite" parent="."]
position = Vector2( 456, 185 )
z_index = -2
z_as_relative = false
texture = ExtResource( 4 )

[node name="EnemyBattlefieldLayout" type="Sprite" parent="."]
position = Vector2( 456, 69 )
z_index = -2
z_as_relative = false
texture = ExtResource( 4 )

[node name="Battlefield" type="HBoxContainer" parent="."]
margin_left = 329.0
margin_top = 152.0
margin_right = 608.0
margin_bottom = 217.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBattlefield" type="HBoxContainer" parent="."]
margin_left = 330.0
margin_top = 36.0
margin_right = 608.0
margin_bottom = 101.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="HBoxContainer" parent="."]
margin_left = 23.0
margin_top = 180.0
margin_right = 42.0
margin_bottom = 245.0
size_flags_horizontal = 4
custom_constants/separation = -24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHand" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 70.0
margin_right = 38.0
margin_bottom = 135.0
size_flags_horizontal = 4
custom_constants/separation = -24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandLayout" type="Sprite" parent="."]
position = Vector2( 105, 219 )
texture = ExtResource( 5 )

[node name="EnemyHandLayout" type="Sprite" parent="."]
position = Vector2( 107, 108 )
texture = ExtResource( 5 )

[node name="MainPortrait" parent="." instance=ExtResource( 7 )]
margin_top = 252.0
margin_bottom = 292.0

[node name="EnemyPortrait" parent="." instance=ExtResource( 6 )]
margin_top = -2.0
margin_bottom = -2.0

[node name="EnemyDrawTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="EnemySelectTimer" type="Timer" parent="."]

[node name="ReadyButton" parent="." instance=ExtResource( 8 )]
margin_left = 325.0
margin_top = 250.0
margin_right = 443.0
margin_bottom = 298.0

[node name="CombatMockTimer" type="Timer" parent="."]
one_shot = true

[node name="BattleDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="DrawButton" parent="." instance=ExtResource( 10 )]
margin_left = 325.0
margin_top = 307.0
margin_right = 443.0
margin_bottom = 355.0

[node name="RoundLabel" parent="." instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.0
margin_top = 52.0
margin_right = 33.0
margin_bottom = 52.0

[node name="RoundTransitionTimer" type="Timer" parent="."]
one_shot = true

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 334.0
margin_right = 121.0
margin_bottom = 382.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )

[node name="CardView" parent="." instance=ExtResource( 14 )]
margin_left = 463.0
margin_top = 240.0
margin_right = 463.0
margin_bottom = 240.0

[node name="DeckView" parent="." instance=ExtResource( 9 )]
visible = false

[node name="RoundConclusion" parent="." instance=ExtResource( 15 )]

[connection signal="timeout" from="EnemyDrawTimer" to="." method="_on_EnemyDrawTimer_timeout"]
[connection signal="timeout" from="EnemySelectTimer" to="." method="_on_EnemySelectTimer_timeout"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="timeout" from="CombatMockTimer" to="." method="_on_CombatMockTimer_timeout"]
[connection signal="timeout" from="RoundTransitionTimer" to="." method="_on_RoundTransitionTimer_timeout"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
